Updated build.gradle.kts to use Tasks/other/packageApp for packaging. Added method to SettingsManager to create the properties file in specified folders on the user's computer